tests/src/frontend/typechecking/invalid/unimplementable_conditional_method_1.sk
class No() {
  fun abs[Int: String](): void;
}
